--- a/style.css
+++ b/style.css
@@ -3,5 +3,12 @@ body{
 }
 nav{
     background-color: greenyellow;
-    
+    padding: 15px 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+nav .logo a{
+    text-decoration: none;
+    color: black;
 }
